Add tests (#4)
Fix critical issues
Increase code coverage
